# goose-perception

./: .gitignore  .gromastate  .use-hermit  AGENTS.md  AVATAR_SYSTEM.md  HYBRID_INTERFACE.md  INTERFACE_MODES.md  MENU_BAR_NOTIFICATIONS.md  PERSONALITY_SYSTEM.md  README.md  RESEARCH.md  RESEARCH.md~  SCHEDULE_CONFIGURATION.md  adapt-recipes.yaml  agent.py  avatar_display.py  calibrate_emotion_detection.py  classifier.py  config_manager.py  configure_interface.py  console.py  debug_avatar.py  diarization.py  emotion_context.py  emotion_detector.py  emotion_detector_v2.py  justfile  listen.py  message_queue.py  observer_avatar_bridge.py  perception.py  pyproject.toml  requirements.md  requirements.txt  run.sh  sample.txt  schedule_manager.py  setup_directories.py  setup_emotion_detection.py  startup.py  (+10 more)
GoosePerception/: Package.resolved  Package.swift  build-app.sh  grant-permissions.sh  run.sh
actions/: agent-screen-activation.yaml  compose_team_update.yaml  create_follow_up_meeting.yaml  enable_slack_and_post.yaml  post_slack_update.yaml  setup_slack_mcp_and_post.yaml  update_project_status.yaml
avatar/: avatar_display.py  debug_avatar.py  menu_bar_avatar.py  observer_avatar_bridge.py  personalities.json  test_actionable_avatar.py  test_avatar.py  test_message_length.py
console/: index.html
notes/: action-dsl-design.md  agent-actions-implementation.md  original-spec.md  plan.md  testing-strategy.md
observers/: .goosehints  .use-hermit  README.md  continuous_screenshots.sh  get_windows.py  notes.py  observer-config.default.json  ocr_helper.py  recent_docs_apps.py  recipe-actionable-suggestions.yaml  recipe-apps-preferences.yaml  recipe-avatar-chatter.yaml  recipe-avatar-suggestions.yaml  recipe-background-tasks.yaml  recipe-background-technical.yaml  recipe-chrome-history.yaml  recipe-content.yaml  recipe-contributions.yaml  recipe-day-improvements.yaml  recipe-focus.yaml  recipe-follow-up-content.yaml  recipe-goose-sessions.yaml  recipe-hypedoc.yaml  recipe-important-attention-message.yaml  recipe-important-email.yaml  recipe-interactions.yaml  recipe-interests.yaml  recipe-meetings-actions.yaml  recipe-morning-attention.yaml  recipe-notes-interaction.yaml  recipe-optimize.yaml  recipe-projects.yaml  recipe-screenshot-capture.yaml  recipe-slack.yaml  recipe-start-fixing.yaml  recipe-stress-wellness.yaml  recipe-system-setup.yaml  recipe-take-time-back.yaml  recipe-upcoming.yaml  recipe-what-working-on.yaml  (+11 more)
perception-classic/: .gitignore  .use-hermit  (+11 more)
(+808 files in other folders)
