[project]
name = "goose-perception"
version = "0.1.0"
description = "A real-time audio and hotkey agent activation tool using local transcription models and screen capture"
requires-python = ">=3.12,<3.13"

dependencies = [
    "openai-whisper",
    "sounddevice>=0.5.1",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
    "datasets>=2.12.0",
    "accelerate>=0.26.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.27.1",
    "jinja2>=3.1.2",
    "nltk>=3.9.1",
    "pynput>=1.8.0",
    "pillow>=10.0.0",
    "PyQt6>=6.5.0",
    "pathlib>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"