[project]
name = "goose-perception"
version = "0.1.0"
description = "A real-time audio and hotkey agent activation tool using local transcription models and screen capture"
requires-python = ">=3.12,<3.13"

dependencies = [
    "faster-whisper",
    "sounddevice>=0.5.1",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
    "datasets>=2.12.0",
    "accelerate>=0.26.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.27.1",
    "jinja2>=3.1.2",
    "nltk>=3.9.1",
    "pynput>=1.8.0",
    "pillow>=10.0.0",
    "PyQt6>=6.5.0",
    "pathlib>=1.0.1",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "insightface>=0.7.3",
    "opencv-python>=4.8.0",
    "deepface>=0.0.93",
    "tf-keras>=2.19.0",
    "ocrmac>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py", "wake-classifier/**/*", "observers/**/*", "actions/**/*", "avatar/**/*"]
